<resources>
    <!--    Dialog 1-->


    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="more_info">More Info</string>

    <string name="choose">Choose</string>

    <string name="shareLocationPrompt">This app wants to access your location.</string>
    <string name="useGoogleLocationServices">Use Google\'s Location Services?</string>
    <string name="useGoogleLocationServicesPrompt">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
    <string name="htmlContent"><![CDATA[
    <b>Material Dialogs</b> is a library designed and developed by
    <a href="https://aidanfollestad.com">Aidan Follestad</a>. As of 2018, Aidan currently works
    on the <u>Square Device Experience</u> team at <a href="https://github.com/square">Square</a>.<br/><br/>
    <i><font color="#0099CC">Thanks for using Material Dialogs!</font></i>
  ]]></string>
    <string name="socialNetworks">Social Networks</string>
    <string name="states">States</string>
    <string name="loremIpsum">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vitae metus nec sapien
    elementum interdum ac mollis tortor. Nunc porttitor metus placerat orci auctor, sed dictum
    magna dapibus. Morbi a lacus ante. Cum sociis natoque penatibus et magnis dis parturient montes,
    nascetur ridiculus mus. Proin posuere nisl imperdiet lectus elementum accumsan. Etiam lacinia
    nisi ut nulla fermentum tempus. Integer ornare lacinia diam non maximus. Vestibulum iaculis urna
    eu elementum scelerisque. Etiam nisl erat, bibendum vitae magna nec, convallis malesuada erat.
    Cras non porttitor nibh. Pellentesque rhoncus sem luctus felis tincidunt bibendum. Pellentesque
    vulputate eros at nulla sollicitudin volutpat. Pellentesque laoreet est sit amet erat laoreet,
    id molestie nulla efficitur. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed
    varius nisl at imperdiet facilisis. Nam in elit sit amet metus dignissim aliquam. Nulla et ante
    molestie, lobortis velit accumsan, ornare massa. Praesent scelerisque quam ipsum, et feugiat
    ante aliquet eget. Aenean ultricies vulputate sem.
  </string>
    <string name="checkboxConfirm">I understand what this means</string>

    <!-- Custom view example -->
    <string name="signalStrength">Signal strength</string>
    <string name="excellent">Excellent</string>
    <string name="security">Security</string>
    <string name="securityType">802.1x EAP</string>
    <string name="password">Password</string>
    <string name="ssid">SSID</string>
    <string name="ssidLit">Material Dialogs</string>
    <string name="showPassword">Show password</string>
    <string name="googleWifi">Google Wifi</string>
    <string name="connect">Connect</string>

    <!-- Color Chooser Examples -->
    <string name="primary_colors">Primary Colors</string>
    <string name="accent_colors">Accent Colors</string>
    <string name="custom_colors">Custom Colors</string>
    <string name="custom_colors_rgb">Custom RGB</string>
    <string name="custom_colors_argb">Custom ARGB</string>

    <!-- File and Folder Chooser Examples -->
    <string name="select">Select</string>


    <string name="dialog_text_title">Don\'t spoil the endgame</string>
    <string name="dialog_text_message">Are you agree to don\'t spoil the movie?</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <!--    Text 2  -->
    <string name="let_s_manage_your_task">Let\'s Manage your task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_item_show_highlight">Clicked item show highlight</string>

    <string name="lorem_persian">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>

    <string name="test_append">نام: %s</string>
    <string name="emptyChart"><![CDATA["    <string name=\"emptyChart\">نموداری برای محصول مورد نظر وجود ندارد</string> "]]></string>

    <!-- Dialog4 -->
    <string name="detecting_location">در حال دستیابی به موقعیت مکانی شما …</string>
    <string name="location_dialog">مکان یابی</string>
    <string name="cancel">انصراف</string>
    <string name="ok">صحیح</string>

    <string name="attention">توجه</string>
    <string name="attention_map">توجه:</string>
    <string name="search">جستجو</string>
    <string name="error">خطا !</string>
    <string name="update_btn">بروز رسانی برنامه</string>
    <string name="not_needed">فعلا نیازی ندارم !</string>
    <string name="exit">خروج</string>

    <!-- SwitchButton 4 -->
    <string name="app_theme">پوسته برنامه</string>
    <string-array name="theme_array">
        <item>روشن</item>
        <item>خودکار</item>
        <item>تاریک</item>
    </string-array>

    <string name="tap_target_music_forward">برای جلو رفتن صوت انگشت خود را در کنار صفحه نگه دارید.</string>
    <string name="tap_target_music_rewind">برای عقب رفتن صوت انگشت خود را در کنار صفحه نگه دارید.</string>
    <string name="tap_target_swipe_brightness">با بالا و پایین کشیدن انگشت خود روشنایی صفحه را تنظیم کنید.</string>
    <string name="tap_target_swipe_volume">با بالا و پایین کشیدن انگشت خود صدای پخش را تنظیم کنید.</string>

</resources>