<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llBaseFragCenterPrg"
    style="@style/card.outline.round"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:textSize="16sp"
            android:textColor="@color/black"
            app:fontFamily="@font/vazir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_dialog" />

        <com.google.android.material.textview.MaterialTextView
            android:textSize="14sp"
            android:textColor="@color/black"
            app:fontFamily="@font/vazir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/detecting_location" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tvCancel"
            style="@style/btn.text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cancel"
            android:textColor="@color/colorRed" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>
